<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?bald_background"
    android:padding="4dp">

    <RelativeLayout
        android:id="@+id/number_container"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/dial_number_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="start"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="50dp"
            android:singleLine="true"
            android:textColor="?bald_text_on_key"
            android:textSize="38sp"
            tools:text="+81 90 1234 5678" />

        <ImageButton
            android:id="@+id/b_backspace"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/backspace"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_backspace" />
    </RelativeLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/dialpad_flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:constraint_referenced_ids="b_1,b_2,b_3,b_4,b_5,b_6,b_7,b_8,b_9,b_star,b_0,b_hash"
        app:flow_maxElementsWrap="3"
        app:flow_verticalGap="@dimen/dialpad_grid_spacing_vertical"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_container" />

    <include
        android:id="@+id/b_1"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_2"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_3"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_4"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_5"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_6"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_7"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_8"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_9"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_star"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_0"
        layout="@layout/dialpad_button" />

    <include
        android:id="@+id/b_hash"
        layout="@layout/dialpad_button" />

    <ImageButton
        android:id="@+id/b_call"
        android:layout_width="@dimen/dialpad_key_size"
        android:layout_height="@dimen/dialpad_key_height"
        android:layout_marginTop="12dp"
        android:background="@drawable/call_button_circle"
        android:contentDescription="@string/call"
        android:src="@drawable/phone_on_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialpad_flow" />

</androidx.constraintlayout.widget.ConstraintLayout>
