<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.bald.uriah.baldphone.views.BaldLinearLayoutButton xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bt_add_contact"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@drawable/style_for_buttons_transparent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="12dp">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/add_outlined_on_background" />

    <TextView
        android:id="@+id/tv_text"
        style="@style/BackgroundText.Medium.Plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/add_contact" />

</com.bald.uriah.baldphone.views.BaldLinearLayoutButton>
